objects/REVVY__MnPriceList__c.object
<CustomObject>
    <fields>
        <fullName>Conversion_Rate__c</fullName>
        <description>The current Conversion Rate of the Price List</description>
        <inlineHelpText>The current Conversion Rate of the Price List</inlineHelpText>
        <label>Conversion Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <description>used for discounting Dnet on Canadian Price Lists</description>
        <inlineHelpText>used for discounting Dnet on Canadian Price Lists</inlineHelpText>
        <label>Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Freight_Factor__c</fullName>
        <description>used to calculate the Freight Charge for Canadian Pricing</description>
        <inlineHelpText>used to calculate the Freight Charge for Canadian Pricing</inlineHelpText>
        <label>Freight Factor</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>